<resources>
    <string name="app_name">SPYPARK_ADMIN</string>
    <string name="todo">TODO</string>
    <string name="your_no_1_parking_assistance">Your no.1 parking assistance</string>
    <string name="password">Password</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="dont_have_account">Don\'t have Account?</string>
    <string name="email">Email</string>
    <string name="todo2">TODO</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email2">Email</string>
    <string name="todo4">TODO</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign UP</string>
    <string name="password1">Password</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="login1">Login</string>
    <string name="todo5">TODO</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="submit">Submit</string>
    <string name="todo6">TODO</string>

</resources>